--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
     <div class="container">
         <h1>POMODORO</h1>
     </div>
-    <div class="todolist">
-        <h1>entrer tache</h1>
+    <div class="todolistInput">
+        <input id="todoInput" placeholder="Entrer une tâche à faire">
+        </input>
     </div>
 
     <div class="screen">
@@ -25,13 +26,11 @@
         <br>
         <br>
         <button type="input" class="btn btn-md btn-primary" id="start">START</button>
-        <button type="input" class="btn btn-md btn-primary" id="pause">PAUSE</button>
-        <button type="input" class="btn btn-md btn-primary" id="stop">STOP</button>
         <button type="input" class="btn btn-md btn-primary" id="reset">RESET</button>
     </div>
-    <div class="todolist">
-        <h1>tache faite</h1>
+    <div class="todolistOutput">
     </div>
+    <button type="button" id="btnClear">Effacer les tâches effectuées</button>
 
 
     <!-- JQuery -->
